# code-pretty-snap

./: .gitignore  LICENSE  README.md  index.html
assets/: index-BrtSclCC.css  index-CMoRsed2.js  index-xpq7Z2xE.js
cli/: README.md  pyproject.toml  requirements.txt
cli/code_pretty_snap/: __init__.py  cli.py  generator.py  themes.py  utils.py
website/: index.html  package-lock.json  package.json
website/src/: App.jsx  styles.css  themes.js  utils.js
website/src/components/: CodeEditor.jsx  Footer.jsx  Preview.jsx  Toolbar.jsx
